--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "firebase": "^7.13.2",
+    "js-cookie": "^2.2.1",
+    "lodash-es": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -29,7 +33,9 @@
     "rules": {
       "import/prefer-default-export": "off",
       "no-param-reassign": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "react/jsx-props-no-spreading": "off"
     }
   },
   "browserslist": {
